--- a/170516/Content/admin.common.css
+++ b/170516/Content/admin.common.css
@@ -983,7 +983,7 @@ footer {
     }
 
     .table-of-contents a.list-group-item-child {
-        background: #485563;
+        background: #fff;
         padding-left: 40px;
     }
 
