--- a/170516/Views/Administrator/AddProduct.cshtml
+++ b/170516/Views/Administrator/AddProduct.cshtml
@@ -93,6 +93,13 @@
                                             <span class="input-error-box text-danger"></span>
                                         </div>
                                     </div>
+                                    <!-- SUMMARY -->
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label" for="ProductSummary">Giá <span class="text-danger">*</span></label>
+                                        <div class="col-sm-7">
+                                            <textarea class="form-control double-input large-input" id="ProductSummary" name="ProductSummary" value="@Model.ProductSummary"></textarea>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col-md-4 col-lg-4">
                                     <div class="form-group">
@@ -115,8 +122,7 @@
 
                             <div class="row">
                                 <div id="AddProductSpecificationTable">
-                                    <!-- SPECIFICATION TABLE -->
-                                    
+                                    <!-- SPECIFICATION TABLE -->                                    
                                 </div>
                             </div>
                             <div class="row">
