--- a/170516/Views/Administrator/UpdateProduct.cshtml
+++ b/170516/Views/Administrator/UpdateProduct.cshtml
@@ -110,6 +110,13 @@
                                             <span class="input-error-box text-danger"></span>
                                         </div>
                                     </div>
+                                    <!-- SUMMARY -->
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label" for="ProductSummary">Giới Thiệu <span class="text-danger">*</span></label>
+                                        <div class="col-sm-7">
+                                            <textarea class="form-control double-input large-input" id="ProductSummary" name="ProductSummary">@Model.ProductSummary</textarea>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col-md-4 col-lg-4">
                                     <div class="form-group">
@@ -224,7 +231,7 @@
                             <div class="col-md-12 col-lg-12">
                                 <div class="form-group">
                                     <div class="col-md-12 form-button">
-                                        <button class="btn btn-primary" type="button" id="SubmitAddProduct"><i class="glyphicon glyphicon-floppy-disk"></i> Lưu</button>
+                                        <button class="btn btn-primary" type="button" id="SubmitUpdateProduct"><i class="glyphicon glyphicon-floppy-disk"></i> Lưu</button>
                                         <button class="btn btn-danger" type="reset"><i class="glyphicon glyphicon-remove"></i> Xóa</button>
                                     </div>
                                 </div>
