--- a/170516/Views/Administrator/ViewProductDetail.cshtml
+++ b/170516/Views/Administrator/ViewProductDetail.cshtml
@@ -69,6 +69,13 @@
                                         <h6 class="info-box">@Model.Price đ</h6>
                                     </div>
                                 </div>
+                                <!-- SUMMARY -->
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="ProductSummary">Giới Thiệu <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
+                                        <textarea class="form-control double-input large-input" id="ProductSummary" name="ProductSummary" value="@Model.Summary"></textarea>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-md-4 col-lg-4">
                                 <div class="form-group">
