--- a/170516/Views/Administrator/_PartialAccount.cshtml
+++ b/170516/Views/Administrator/_PartialAccount.cshtml
@@ -1,24 +1,11 @@
-﻿<div class="navbar navbar-inverse" role="banner">
-    <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
-        <ul class="nav navbar-nav">
-            <li class="dropdown">
-                @if (User.Identity.IsAuthenticated)
-                {
-                    <a href="#" class="nav-dropdown-toggle dropdown-toggle" data-toggle="dropdown">@User.Identity.Name <b class="caret"></b></a>
-                    <ul class="nav-dropdown-menu dropdown-menu animated fadeInUp">
-                        <li><a href="@Url.Action("LogOff","Account")">Đăng Xuất</a></li>
-                        <li><a href="@Url.Action("LogOff","Account")">Đăng Xuất</a></li>
-                        <li><a href="@Url.Action("LogOff","Account")">Đăng Xuất</a></li>
-                        <li><a href="@Url.Action("LogOff","Account")">Đăng Xuất</a></li>
-                        <li><a href="@Url.Action("LogOff","Account")">Đăng Xuất</a></li>
-                    </ul>
-                }
-                else
-                {
-                    @*<a href="#" class="dropdown-toggle" data-toggle="dropdown">@User.Identity.Name <b class="caret"></b></a>*@
-                    <a href="@Url.Action("Login","Account")">Đăng Nhập</a>
-                }
-            </li>
-        </ul>
-    </nav>
-</div>
+﻿@if (User.Identity.IsAuthenticated)
+{
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-user" style="margin-right:5px;"> @User.Identity.Name <span class="caret"></span></a>
+    <ul class="dropdown-menu" role="menu">
+        <li><a href="@Url.Action("LogOff","Account")">Đăng Xuất</a></li>
+    </ul>
+}
+else
+{
+    <a href="@Url.Action("Login","Account")"><i class="fa fa-user" style="margin-right:5px;"></i>Đăng Nhập</a>
+}
