--- a/170516/Views/Home/About.cshtml
+++ b/170516/Views/Home/About.cshtml
@@ -14,7 +14,7 @@
     </section>
 </div>
 
-<div class="row about-div">
+<div class="row about-div main-content-wrapper" style="margin-top: 20px;">
     <div class="col-lg-12">
         <fieldset>
             <legend>Lịch sử công ty</legend>
