--- a/170516/Views/Home/Contact.cshtml
+++ b/170516/Views/Home/Contact.cshtml
@@ -2,96 +2,99 @@
     ViewBag.Title = "Liên hệ";
 }
 
-<div class="row" style="text-align:center;background-color:#fff;">
-    <img src="~/Content/Construction-Company.jpg" />
-</div>
+<div class="main-content-wrapper container-fluid" >
 
-<div class="row">
-    <div class="col-md-4">
-        <div class="wpb_wrapper">
-            <!-- BDF CONTACT LINKS -->
-            <div class="jx-rebuild-contact-info">
+    <div class="row" style="text-align:center;background-color:#fff;">
+        <img src="~/Content/Construction-Company.jpg" style="max-width:100%;max-height:100%;" />
+    </div>
 
-                <div class="icon"><i class="fa fa-globe fa-5x"></i></div>
+    <div class="row contact-wrapper">
+        <div class="col-md-4">
+            <div class="wpb_wrapper">
+                <!-- BDF CONTACT LINKS -->
+                <div class="jx-rebuild-contact-info">
 
-                <div class="item-position">
-                    <div class="title">ĐỊA ĐIỂM</div>
-                    <div class="address">Hà Nội: 80 Cầu Giấy, Ba Đình</div>
-                    <div class="address">Hồ Chí Minh: 05 Nguyễn Huệ, Q.1</div>
-                    <div class="address">Đà Nẵng: 01 Trần Phú, Hải Châu</div>
+                    <div class="icon"><i class="fa fa-globe fa-5x"></i></div>
+
+                    <div class="item-position">
+                        <div class="title">ĐỊA ĐIỂM</div>
+                        <div class="address">Hà Nội: 80 Cầu Giấy, Ba Đình</div>
+                        <div class="address">Hồ Chí Minh: 05 Nguyễn Huệ, Q.1</div>
+                        <div class="address">Đà Nẵng: 01 Trần Phú, Hải Châu</div>
+                    </div>
+
                 </div>
+            </div>
+        </div>
 
+        <div class="col-md-4">
+            <div class="wpb_wrapper">
+                <!-- BDF CONTACT LINKS -->
+                <div class="jx-rebuild-contact-info">
+
+                    <div class="icon"><i class="fa fa-phone fa-5x"></i></div>
+
+                    <div class="item-position">
+                        <div class="title">ĐIỆN THOẠI</div>
+                        <div class="phone">(997) 54 215412 - (997) 54 132546</div>
+                        <div class="phone">(997) 54 215412 - (997) 54 132546</div>
+                        <div class="phone">(997) 54 215412 - (997) 54 132546</div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="wpb_wrapper">
+                <!-- BDF CONTACT LINKS -->
+                <div class="jx-rebuild-contact-info">
+
+                    <div class="icon"><i class="fa fa-wechat fa-5x"></i></div>
+
+                    <div class="item-position">
+                        <div class="title">LIÊN HỆ KHÁC</div>
+                        <div class="address"><a href="#"><i class="fa fa-facebook"></i> <span>www.facebook.com/construction-site</span></a></div>
+                        <div class="address"><a href="#"><i class="fa fa-skype"></i> <span>skype:construction-site</span></a></div>
+                        <div class="email"><i class="fa fa-inbox"></i> <span>info.constructionsite@gmail.com</span></div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="col-md-4">
-        <div class="wpb_wrapper">
-            <!-- BDF CONTACT LINKS -->
-            <div class="jx-rebuild-contact-info">
+    <hr />
 
-                <div class="icon"><i class="fa fa-phone fa-5x"></i></div>
-
-                <div class="item-position">
-                    <div class="title">ĐIỆN THOẠI</div>
-                    <div class="phone">(997) 54 215412 - (997) 54 132546</div>
-                    <div class="phone">(997) 54 215412 - (997) 54 132546</div>
-                    <div class="phone">(997) 54 215412 - (997) 54 132546</div>
+    <!-- FORM -->
+    <div class="form-horizontal" style="margin-top:40px;">
+        <div class="row">
+            <div class="col-md-6 col-lg-6 col-lg-offset-2">
+                <div class="form-group">
+                    <label class="col-sm-4 control-label" for="FullName">Họ và Tên <span class="text-danger">*</span></label>
+                    <div class="col-sm-8">
+                        <input class="form-control" type="text" id="FullName" name="FullName" placeholder="Họ và tên" />
+                        <span class="input-error-box text-danger"></span>
+                    </div>
                 </div>
-
-            </div>
-        </div>
-    </div>
-
-    <div class="col-md-4">
-        <div class="wpb_wrapper">
-            <!-- BDF CONTACT LINKS -->
-            <div class="jx-rebuild-contact-info">
-
-                <div class="icon"><i class="fa fa-wechat fa-5x"></i></div>
-
-                <div class="item-position">
-                    <div class="title">LIÊN HỆ KHÁC</div>
-                    <div class="address"><a href="#"><i class="fa fa-facebook"></i> <span>www.facebook.com/construction-site</span></a></div>
-                    <div class="address"><a href="#"><i class="fa fa-skype"></i> <span>skype:construction-site</span></a></div>
-                    <div class="email"><i class="fa fa-inbox"></i> <span>info.constructionsite@gmail.com</span></div>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label" for="EmailAddress">Địa chỉ email <span class="text-danger">*</span></label>
+                    <div class="col-sm-8">
+                        <input class="form-control" type="email" id="EmailAddress" name="EmailAddress" placeholder="Địa chỉ email" />
+                        <span class="input-error-box text-danger"></span>
+                    </div>
                 </div>
-
-            </div>
-        </div>
-    </div>
-</div>
-
-<hr />
-
-<!-- FORM -->
-<div class="form-horizontal" style="margin-top:40px;">
-    <div class="row">
-        <div class="col-md-6 col-lg-6 col-lg-offset-2">
-            <div class="form-group">
-                <label class="col-sm-4 control-label" for="FullName">Họ và Tên <span class="text-danger">*</span></label>
-                <div class="col-sm-8">
-                    <input class="form-control" type="text" id="FullName" name="FullName" />
-                    <span class="input-error-box text-danger"></span>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label" for="Content">Nội dung <span class="text-danger">*</span></label>
+                    <div class="col-sm-8">
+                        <textarea class="form-control" id="Content" name="Content" style="height: 150px;" placeholder="Nội dung yêu cầu"></textarea>
+                        <span class="input-error-box text-danger"></span>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-4 control-label" for="EmailAddress">Địa chỉ email <span class="text-danger">*</span></label>
-                <div class="col-sm-8">
-                    <input class="form-control" type="email" id="EmailAddress" name="EmailAddress" />
-                    <span class="input-error-box text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-4 control-label" for="Content">Nội dung <span class="text-danger">*</span></label>
-                <div class="col-sm-8">
-                    <textarea class="form-control" id="Content" name="Content" style="height: 150px;"></textarea>
-                    <span class="input-error-box text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-7 col-sm-10">
-                    <button id="SendRequestBtn" type="button" class="btn btn-primary"><i class="fa fa-envelope-o"></i> Gửi yêu cầu</button>
+                <div class="form-group">
+                    <div class="col-sm-offset-7 col-sm-10">
+                        <button id="SendRequestBtn" type="button" class="btn btn-primary"><i class="fa fa-envelope-o"></i> Gửi yêu cầu</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -102,6 +105,9 @@
 {
     <script>
         $(document).ready(function () {
+            // focus on the full name input
+            $('#FullName').focus();
+
             $('#SendRequestBtn').on('click', function () {
                 var isValid = true;
                 var $name = $('#FullName'),
@@ -158,7 +164,7 @@
 
                                     toastr.success('Gửi yêu cầu thành công.');
                                     return;
-                                }                                
+                                }
                             }
 
                             toastr.error('Có lỗi xảy ra trong quá trình lưu. Vui lòng thử lại.');
