--- a/170516/Views/Shared/_LayoutPlain.cshtml
+++ b/170516/Views/Shared/_LayoutPlain.cshtml
@@ -10,11 +10,12 @@
 
     <title>@ViewBag.Title</title>
 
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic&subset=vietnamese,latin' rel='stylesheet' type='text/css'>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body style="height: 100%; background-repeat: no-repeat; background-color: #2c3e50; ">
-    <div class="container main-content">
+    <div class="container">
         <div class="row">
             @RenderBody()
         </div>
@@ -22,9 +23,10 @@
         <hr>
         <!-- Footer -->
         <footer>
-            <div class="row">
-                <div class="col-lg-12" style="color:white;">
-                    <p>Copyright &copy; Your Website 2014</p>
+            <!-- Footer -->
+            <div class="container-fluid">
+                <div class="copy text-center" style="height :52px; margin-top: 20px; ">
+                    Copyright © 2016 by <a href="#">OUR DEVELOPER</a>
                 </div>
             </div>
         </footer>
